Fix colors and spacing

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,15 +1,19 @@
 html {
 	box-sizing: border-box;
+	font-size: 62.5%;
 }
 
 body {
 	margin: 0;
+	color: black;
 }
 
 nav,
 main,
 .features {
-	background-color: rgb(245, 245, 245);
+	background-color: #e1fb4c;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 /******************************************
@@ -21,8 +25,8 @@ nav,
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	gap: 40px;
-	padding: 0 30px;
+	gap: 30px;
+	padding: 4px 30px;
 }
 
 nav li {
@@ -32,13 +36,25 @@ nav li {
 nav a {
 	color: black;
 	text-decoration: none;
+	font-weight: 600;
+	text-transform: uppercase;
+	font-size: 1.3rem;
+}
+
+nav li a:hover {
+	color: #e93cd4;
 }
 
 .button {
-	background-color: rgb(55, 55, 120);
+	background-color: #e93cd4;
 	padding: 5px 15px;
-	border-radius: 3px;
+	border-radius: 1px;
 	color: white;
+	font-size: 1.1rem;
+}
+
+.button:hover {
+	background-color: #5ff86c;
 }
 
 /******************************************
@@ -47,7 +63,7 @@ nav a {
 
 main {
 	display: flex;
-	padding-top: 40px;
+	padding-top: 60px;
 	padding-left: 100px;
 	gap: 20px;
 	justify-content: space-between;
@@ -66,16 +82,26 @@ main img {
 	margin-right: 0;
 }
 
+main span {
+	font-size: 1.5rem;
+}
+
 h1 {
 	margin-top: 13px;
+	font-size: 4.5rem;
+	line-height: 4.4rem;
 }
 
 main div span {
 	text-transform: uppercase;
 }
 
+main p {
+	font-size: 1.7rem;
+}
+
 /******************************************
-/* MAIN
+/* SEARCH BAR
 /*******************************************/
 
 .searchbar input {
@@ -83,13 +109,20 @@ main div span {
 	background-color: rgb(215, 215, 215);
 	border: none;
 	padding: 5px 7px;
+	font-size: 1.3rem;
 }
 
 .searchbar button {
 	border: none;
 	padding: 0 15px;
 	color: white;
-	background-color: rgb(55, 55, 120);
+	background-color: #e93cd4;
+	font-size: 1.1rem;
+	text-transform: uppercase;
+}
+
+.searchbar button:hover {
+	background-color: #5ff86c;
 }
 
 .searchbar {
@@ -108,14 +141,19 @@ main div span {
 
 .features {
 	display: flex;
-	padding: 60px 100px 30px 100px;
+	padding: 70px 100px 70px 100px;
 	gap: 20px;
+	font-size: 1.4rem;
 }
 
 .features a {
 	text-decoration: none;
 	color: black;
 	font-weight: 600;
+}
+
+.features a:hover {
+	color: #5ff86c;
 }
 
 .features img {
@@ -127,7 +165,15 @@ main div span {
 /*******************************************/
 
 .bottom {
-	padding: 40px 100px;
+	padding: 30px 100px 50px 100px;
+}
+
+.bottom h2 {
+	font-size: 3rem;
+}
+
+.bottom p {
+	font-size: 1.7rem;
 }
 
 .bottom img {
@@ -143,17 +189,27 @@ footer {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 30px 0;
-	background-color: aliceblue;
+	padding: 30px 0 30px 0;
+	background-color: #5ff86c;
+	font-size: 1.4rem;
+}
+
+footer li:hover {
+	color: white;
 }
 
 footer section {
 	display: flex;
 	gap: 25px;
+	padding-bottom: 10px;
 }
 
 footer section img {
 	width: 20px;
+}
+
+footer img:hover {
+	filter: invert();
 }
 
 footer ul {
